# assignment7.2_2MOD

./: CMakeLists.txt  main_all.cpp
